--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ws": "^1.1.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "mocha": "^2.5.3",
     "nock": "^8.0.0",
